--- a/provisioning/templates/etc-php5-conf-d-xdebug-ini.j2
+++ b/provisioning/templates/etc-php5-conf-d-xdebug-ini.j2
@@ -1,9 +1,9 @@
-zend_extension=/usr/lib/php5/20090626+lfs/xdebug.so
+zend_extension=/usr/lib/php5/20090626/xdebug.so
 
-xdebug.cli_color=1
-xdebug.show_exception_trace=1
-xdebug.show_mem_delta=1
-xdebug.collect_params=1
+;xdebug.cli_color=1
+;xdebug.show_exception_trace=1
+;xdebug.show_mem_delta=1
+;xdebug.collect_params=1
 
 xdebug.remote_enable=On
 xdebug.remote_host=192.168.33.1
