--- a/provisioning/templates/etc-apache2-sites-available-devserver.j2
+++ b/provisioning/templates/etc-apache2-sites-available-devserver.j2
@@ -3,12 +3,12 @@
   ServerAdmin {{ apache_server_admin }}
   
   DocumentRoot /vagrant/{{ project }}/www
-  ErrorLog /vagrant/{{ project }}.apache.error.log
+  ErrorLog /vagrant/{{ project }}/apache.error.log
   php_flag log_errors on
   php_value error_reporting 'E_ALL & ~E_NOTICE'
   php_value error_log /vagrant/{{ project }}/php.error.log
 
-  <Directory /vargrant/{{ project }}>
+  <Directory /vargrant/{{ project }}/www>
     Options +FollowSymLinks Indexes
     AllowOverride All
     order allow,deny
